SPEC2017: disable -fforce-emit-vtables for 510.parest_r

--- a/External/SPEC/CFP2017rate/510.parest_r/CMakeLists.txt
+++ b/External/SPEC/CFP2017rate/510.parest_r/CMakeLists.txt
@@ -8,6 +8,8 @@ speccpu2017_benchmark(RATE)
 
 speccpu2017_add_include_dirs(include .)
 
+add_definitions(-fno-force-emit-vtables)
+
 ## test ########################################################################
 
 speccpu2017_run_test(
